Download file from server